files/kubernetes/manifests/infrastructure/ldap/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openldap
  labels:
    app.kubernetes.io/name: openldap
    app.kubernetes.io/component: authentication
    app.kubernetes.io/part-of: authentication-infrastructure
