files/kubernetes/manifests/infrastructure/ldap/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ldap-ingress
  namespace: openldap
  labels:
    app.kubernetes.io/name: openldap
    app.kubernetes.io/component: authentication
    app.kubernetes.io/part-of: authentication-infrastructure
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ldap.kojigenba-srv.com
    - phpadmin.kojigenba-srv.com
    secretName: ldap-kojigenba-srv-com-tls
  rules:
  - host: ldap.kojigenba-srv.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: phpadmin
            port:
              number: 80
  - host: phpadmin.kojigenba-srv.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: phpadmin
            port:
              number: 80
